--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "html-webpack-plugin": "^5.4.0",
+    "mini-css-extract-plugin": "^2.4.3",
     "node-sass": "^6.0.1",
     "sass": "^1.43.3",
     "sass-loader": "^12.2.0",
