--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.4.0",
     "mini-css-extract-plugin": "^2.4.3",
     "node-sass": "^6.0.1",
