--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "express": "^4.17.1",
+    "mobx": "^4.15.4",
+    "mobx-react": "^6.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.4.0"
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.3",
