--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.4.0",
+    "image-minimizer-webpack-plugin": "^2.2.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "9.0.0",
     "mini-css-extract-plugin": "^2.4.3",
     "node-sass": "^6.0.1",
     "sass": "^1.43.3",
